using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using Axlebolt.Bolt.Protobuf2;
using Axlebolt.Bolt.Protobuf;
using StandRiseServer.Core;
using Google.Protobuf;

namespace StandRiseServer.Services;

/// <summary>
/// –°–µ—Ä–≤–∏—Å –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–æ–π –∏–≥—Ä–æ–∫–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ
/// –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –ø–æ—Å–ª–µ –º–∞—Ç—á–∞ –≤ arrayCust —Å—Ç—Ä—É–∫—Ç—É—Ä—É
/// </summary>
public class GameServerStatsRemoteService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public GameServerStatsRemoteService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;
        
        _handler.RegisterHandler("GameServerStatsRemoteService", "saveMatchStats", SaveMatchStatsAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "getPlayerMatchHistory", GetPlayerMatchHistoryAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "updatePlayerStats", UpdatePlayerStatsAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "getLeaderboard", GetLeaderboardAsync);
    }

    /// <summary>
    /// –°–æ—Ö—Ä–∞–Ω—è–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –º–∞—Ç—á–∞ –≤ arrayCust –ø–æ—Å–ª–µ –æ–∫–æ–Ω—á–∞–Ω–∏—è –∏–≥—Ä—ã
    /// </summary>
    private async Task SaveMatchStatsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("=== SaveMatchStats Request ===");
            var session = _sessionManager.GetSessionByClient(client);
            if (session == null || request.Params.Count == 0)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            var player = await _database.GetPlayerByTokenAsync(session.Token);
            if (player == null)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            // –ü–∞—Ä—Å–∏–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –º–∞—Ç—á–∞ –∏–∑ –ø–∞—Ä–∞–º–µ—Ç—Ä–æ–≤
            var matchStatsData = request.Params[0];
            if (matchStatsData.One != null && matchStatsData.One.Length > 0)
            {
                try
                {
                    var matchStats = MatchStatsData.ParseFrom(matchStatsData.One.ToByteArray());
                    
                    // –û–±–Ω–æ–≤–ª—è–µ–º –æ—Å–Ω–æ–≤–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∏–≥—Ä–æ–∫–∞
                    UpdatePlayerMainStats(player, matchStats);
                    
                    // –°–æ—Ö—Ä–∞–Ω—è–µ–º –¥–µ—Ç–∞–ª—å–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –≤ arrayCust
                    SaveMatchStatsToArrayCust(player, matchStats);
                    
                    // –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –ø–æ –æ—Ä—É–∂–∏—é
                    UpdateWeaponStats(player, matchStats);
                    
                    // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö
                    await _database.UpdatePlayerAsync(player);
                    
                    Console.WriteLine($"‚úÖ SaveMatchStats successful for: {player.Name}");
                    Console.WriteLine($"üìä Updated stats - Kills: {player.Stats.TotalKills}, Deaths: {player.Stats.TotalDeaths}, Matches: {player.Stats.TotalMatches}");
                }
                catch (Exception ex)
                {
                    Console.WriteLine($"‚ö†Ô∏è Error parsing match stats: {ex.Message}");
                }
            }

            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå Error in SaveMatchStats: {ex.Message}");
            await SendUnauthorizedAsync(client, request.Id);
        }
    }

    /// <summary>
    /// –ü–æ–ª—É—á–∞–µ—Ç –∏—Å—Ç–æ—Ä–∏—é –º–∞—Ç—á–µ–π –∏–≥—Ä–æ–∫–∞
    /// </summary>
    private async Task GetPlayerMatchHistoryAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("=== GetPlayerMatchHistory Request ===");
            var session = _sessionManager.GetSessionByClient(client);
            if (session == null)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            var player = await _database.GetPlayerByTokenAsync(session.Token);
            if (player == null)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            var result = new BinaryValue { IsNull = false };
            
            // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –ø–æ—Å–ª–µ–¥–Ω–∏–µ 10 –º–∞—Ç—á–µ–π –∏–∑ arrayCust
            var recentMatches = player.Stats.ArrayCust
                .Where(s => s.Name.Contains("match_") || s.Name.Contains("game_"))
                .OrderByDescending(s => s.Name)
                .Take(10)
                .ToList();

            foreach (var match in recentMatches)
            {
                var matchInfo = new GameSetting
                {
                    Key = match.Name,
                    Type = SettingType.String,
                    Value = System.Text.Json.JsonSerializer.Serialize(new
                    {
                        name = match.Name,
                        intValue = match.IntValue,
                        floatValue = match.FloatValue
                    })
                };
                result.Array.Add(ByteString.CopyFrom(matchInfo.ToByteArray()));
            }

            Console.WriteLine($"‚úÖ GetPlayerMatchHistory successful - Found {recentMatches.Count} matches");
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå Error in GetPlayerMatchHistory: {ex.Message}");
            await SendUnauthorizedAsync(client, request.Id);
        }
    }

    /// <summary>
    /// –û–±–Ω–æ–≤–ª—è–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∏–≥—Ä–æ–∫–∞
    /// </summary>
    private async Task UpdatePlayerStatsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("=== UpdatePlayerStats Request ===");
            var session = _sessionManager.GetSessionByClient(client);
            if (session == null || request.Params.Count == 0)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            var player = await _database.GetPlayerByTokenAsync(session.Token);
            if (player == null)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            // –ü–∞—Ä—Å–∏–º –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏
            foreach (var statBytes in request.Params[0].Array)
            {
                try
                {
                    var storeStat = StorePlayerStat.Parser.ParseFrom(statBytes);
                    
                    // –ò—â–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –≤ arrayCust
                    var existingStat = player.Stats.ArrayCust.FirstOrDefault(s => s.Name == storeStat.Name);
                    if (existingStat != null)
                    {
                        existingStat.IntValue = storeStat.StoreInt;
                        existingStat.FloatValue = 0;
                    }
                    else
                    {
                        // –î–æ–±–∞–≤–ª—è–µ–º –Ω–æ–≤—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É
                        player.Stats.ArrayCust.Add(new Models.StatItem
                        {
                            Name = storeStat.Name,
                            IntValue = storeStat.StoreInt,
                            FloatValue = 0,
                            Type = "INT"
                        });
                    }
                }
                catch (Exception ex)
                {
                    Console.WriteLine($"‚ö†Ô∏è Error parsing stat: {ex.Message}");
                }
            }

            await _database.UpdatePlayerAsync(player);
            Console.WriteLine($"‚úÖ UpdatePlayerStats successful for: {player.Name}");

            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå Error in UpdatePlayerStats: {ex.Message}");
            await SendUnauthorizedAsync(client, request.Id);
        }
    }

    /// <summary>
    /// –ü–æ–ª—É—á–∞–µ—Ç —Ç–∞–±–ª–∏—Ü—É –ª–∏–¥–µ—Ä–æ–≤
    /// </summary>
    private async Task GetLeaderboardAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("=== GetLeaderboard Request ===");
            var session = _sessionManager.GetSessionByClient(client);
            if (session == null)
            {
                await SendUnauthorizedAsync(client, request.Id);
                return;
            }

            var result = new BinaryValue { IsNull = false };
            
            // –ü–æ–ª—É—á–∞–µ–º —Ç–æ–ø 100 –∏–≥—Ä–æ–∫–æ–≤ –ø–æ –∫–æ–ª–∏—á–µ—Å—Ç–≤—É —É–±–∏–π—Å—Ç–≤
            var topPlayers = await _database.GetTopPlayersByKillsAsync(100);
            
            int rank = 1;
            foreach (var topPlayer in topPlayers)
            {
                var leaderboardEntry = new GameSetting
                {
                    Key = $"rank_{rank}",
                    Type = SettingType.String,
                    Value = System.Text.Json.JsonSerializer.Serialize(new
                    {
                        rank = rank,
                        playerName = topPlayer.Name,
                        playerId = topPlayer.PlayerUid,
                        kills = topPlayer.Stats.TotalKills,
                        deaths = topPlayer.Stats.TotalDeaths,
                        matches = topPlayer.Stats.TotalMatches,
                        winRate = topPlayer.Stats.WinRate,
                        kdr = topPlayer.Stats.KDR,
                        level = topPlayer.Level
                    })
                };
                result.Array.Add(ByteString.CopyFrom(leaderboardEntry.ToByteArray()));
                rank++;
            }

            Console.WriteLine($"‚úÖ GetLeaderboard successful - Found {topPlayers.Count} players");
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå Error in GetLeaderboard: {ex.Message}");
            await SendUnauthorizedAsync(client, request.Id);
        }
    }

    /// <summary>
    /// –û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Å–Ω–æ–≤–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∏–≥—Ä–æ–∫–∞ –Ω–∞ –æ—Å–Ω–æ–≤–µ –¥–∞–Ω–Ω—ã—Ö –º–∞—Ç—á–∞
    /// </summary>
    private void UpdatePlayerMainStats(Models.Player player, MatchStatsData matchStats)
    {
        player.Stats.TotalMatches++;
        player.Stats.TotalKills += matchStats.Kills;
        player.Stats.TotalDeaths += matchStats.Deaths;
        player.Stats.Assists += matchStats.Assists;
        player.Stats.Headshots += matchStats.Headshots;
        player.Stats.DamageDealt += matchStats.DamageDealt;
        
        if (matchStats.IsWin)
        {
            player.Stats.TotalWins++;
        }
        else
        {
            player.Stats.TotalLosses++;
        }

        // –û–±–Ω–æ–≤–ª—è–µ–º —Ä–∞–Ω–≥–æ–≤—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –µ—Å–ª–∏ —ç—Ç–æ —Ä–∞–Ω–≥–æ–≤—ã–π –º–∞—Ç—á
        if (matchStats.IsRanked)
        {
            player.Stats.RankedMatches++;
            if (matchStats.IsWin)
            {
                player.Stats.RankedWins++;
            }
            else
            {
                player.Stats.RankedLosses++;
            }
        }

        // –û–±–Ω–æ–≤–ª—è–µ–º –≤—Ä–µ–º—è –≤ –∏–≥—Ä–µ
        player.TimeInGame += matchStats.MatchDuration;
    }

    /// <summary>
    /// –°–æ—Ö—Ä–∞–Ω—è–µ—Ç –¥–µ—Ç–∞–ª—å–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –º–∞—Ç—á–∞ –≤ arrayCust
    /// </summary>
    private void SaveMatchStatsToArrayCust(Models.Player player, MatchStatsData matchStats)
    {
        var timestamp = DateTimeOffset.UtcNow.ToUnixTimeSeconds();
        var matchId = $"match_{timestamp}_{Guid.NewGuid().ToString().Substring(0, 8)}";

        // –°–æ—Ö—Ä–∞–Ω—è–µ–º –æ—Å–Ω–æ–≤–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ –º–∞—Ç—á–∞
        var matchStats_list = new[]
        {
            new Models.StatItem { Name = $"{matchId}_kills", IntValue = matchStats.Kills, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_deaths", IntValue = matchStats.Deaths, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_assists", IntValue = matchStats.Assists, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_headshots", IntValue = matchStats.Headshots, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_damage", IntValue = (int)matchStats.DamageDealt, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_duration", IntValue = matchStats.MatchDuration, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_isWin", IntValue = matchStats.IsWin ? 1 : 0, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_isRanked", IntValue = matchStats.IsRanked ? 1 : 0, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_gameMode", IntValue = (int)matchStats.GameMode, Type = "INT" },
            new Models.StatItem { Name = $"{matchId}_timestamp", IntValue = (int)timestamp, Type = "INT" }
        };

        foreach (var stat in matchStats_list)
        {
            // –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ —É–∂–µ —Ç–∞–∫–∞—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞
            var existing = player.Stats.ArrayCust.FirstOrDefault(s => s.Name == stat.Name);
            if (existing == null)
            {
                player.Stats.ArrayCust.Add(stat);
            }
            else
            {
                existing.IntValue = stat.IntValue;
            }
        }

        // –û–±–Ω–æ–≤–ª—è–µ–º –æ–±—â–∏–µ —Å—á–µ—Ç—á–∏–∫–∏
        UpdateOrAddStat(player, "total_kills", player.Stats.TotalKills);
        UpdateOrAddStat(player, "total_deaths", player.Stats.TotalDeaths);
        UpdateOrAddStat(player, "total_matches", player.Stats.TotalMatches);
        UpdateOrAddStat(player, "total_wins", player.Stats.TotalWins);
        UpdateOrAddStat(player, "total_losses", player.Stats.TotalLosses);
        UpdateOrAddStat(player, "total_assists", player.Stats.Assists);
        UpdateOrAddStat(player, "total_headshots", player.Stats.Headshots);
        UpdateOrAddStat(player, "total_damage", (int)player.Stats.DamageDealt);
    }

    /// <summary>
    /// –û–±–Ω–æ–≤–ª—è–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –ø–æ –æ—Ä—É–∂–∏—é
    /// </summary>
    private void UpdateWeaponStats(Models.Player player, MatchStatsData matchStats)
    {
        if (matchStats.WeaponStats == null || matchStats.WeaponStats.Count == 0)
            return;

        foreach (var weaponStat in matchStats.WeaponStats)
        {
            var weaponKey = weaponStat.WeaponName.ToLower();
            
            if (!player.Stats.WeaponStats.ContainsKey(weaponKey))
            {
                player.Stats.WeaponStats[weaponKey] = new Models.WeaponStats
                {
                    WeaponName = weaponStat.WeaponName
                };
            }

            var stats = player.Stats.WeaponStats[weaponKey];
            stats.Kills += weaponStat.Kills;
            stats.Deaths += weaponStat.Deaths;
            stats.Headshots += weaponStat.Headshots;
            stats.DamageDealt += weaponStat.DamageDealt;
            stats.ShotsHit += weaponStat.ShotsHit;
            stats.ShotsFired += weaponStat.ShotsFired;

            // –¢–∞–∫–∂–µ —Å–æ—Ö—Ä–∞–Ω—è–µ–º –≤ arrayCust –¥–ª—è —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏
            UpdateOrAddStat(player, $"gun_{weaponKey}_kills", stats.Kills);
            UpdateOrAddStat(player, $"gun_{weaponKey}_deaths", stats.Deaths);
            UpdateOrAddStat(player, $"gun_{weaponKey}_headshots", stats.Headshots);
            UpdateOrAddStat(player, $"gun_{weaponKey}_damage", (int)stats.DamageDealt);
        }
    }

    /// <summary>
    /// –í—Å–ø–æ–º–æ–≥–∞—Ç–µ–ª—å–Ω—ã–π –º–µ—Ç–æ–¥ –¥–ª—è –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –∏–ª–∏ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –≤ arrayCust
    /// </summary>
    private void UpdateOrAddStat(Models.Player player, string statName, int value)
    {
        var existing = player.Stats.ArrayCust.FirstOrDefault(s => s.Name == statName);
        if (existing != null)
        {
            existing.IntValue = value;
        }
        else
        {
            player.Stats.ArrayCust.Add(new Models.StatItem
            {
                Name = statName,
                IntValue = value,
                Type = "INT"
            });
        }
    }

    private async Task SendUnauthorizedAsync(TcpClient client, string guid)
    {
        await _handler.WriteProtoResponseAsync(client, guid, null,
            new RpcException { Id = guid, Code = 401, Property = null });
    }
}

/// <summary>
/// –ú–æ–¥–µ–ª—å –¥–ª—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –º–∞—Ç—á–∞
/// </summary>
public class MatchStatsData
{
    public int Kills { get; set; }
    public int Deaths { get; set; }
    public int Assists { get; set; }
    public int Headshots { get; set; }
    public long DamageDealt { get; set; }
    public int MatchDuration { get; set; }
    public bool IsWin { get; set; }
    public bool IsRanked { get; set; }
    public int GameMode { get; set; }
    public List<WeaponStatData> WeaponStats { get; set; } = new();

    public byte[] ToByteArray() => System.Text.Json.JsonSerializer.SerializeToUtf8Bytes(this);

    public static MatchStatsData ParseFrom(byte[] data)
    {
        return System.Text.Json.JsonSerializer.Deserialize<MatchStatsData>(data) ?? new MatchStatsData();
    }
}

public class WeaponStatData
{
    public string WeaponName { get; set; } = string.Empty;
    public int Kills { get; set; }
    public int Deaths { get; set; }
    public int Headshots { get; set; }
    public long DamageDealt { get; set; }
    public int ShotsHit { get; set; }
    public int ShotsFired { get; set; }
}
